# M_PF_etudiant

./: README.md
TP_cpp/: Liste.cpp  test
TP_cpp/42vainc/: Makefile
TP_cpp/42vainc/src/: 42vainc_console.cpp  42vainc_graphique.cpp  Jeu42.cpp  Jeu42.hpp  Vue.cpp  Vue.hpp  sacados.cpp
TP_cpp/cubesampler/: #cubesampler.cpp#  Makefile  cubesampler.cpp  cubesampler.out
TP_cpp/equalizer/: Makefile  equalizer.cpp  hawkes_bay_nz.pgm  image.hpp
TP_cpp/exos/: Makefile  ex_1.cpp  ex_1.cpp~  ex_1.out  ex_2.cpp  ex_2.cpp~  ex_2.out  ex_4.cpp  ex_4.cpp~  ex_4.out  exo_3.cpp  exo_3.cpp~  exo_3.out
TP_haskell/: #Classestypes.hs#  #exo6.hs#  #fonctionssurlistes.hs#  .#exo6.hs  ArbreBinaire.hs  ArbreBinaire.hs~  Classestypes.hs  Classestypes.hs~  Liste.hs  Liste.hs~  PGCD.hs~  Peutetre.hs  Peutetre.hs~  arbresgen.hs  arbresgen.hs~  calculparreduction.hs  calculparreduction.hs~  compositionfonction.hs  compositionfonction.hs~  decouverte_helloworld  decouverte_helloworld.hs  evalutationpartielle.hs  exo1  exo1.hs  exo2  exo2.hi  exo2.hs  exo2.hs~  exo3  exo3.hs  exo3.hs~  exo4.hs  exo4.hs~  exo5  exo5.hs  exo5.hs~  exo6.hs  figuregeo.hs  figuregeo.hs~  filtragesimple.hs  (+29 more)
TP_projets/: bd.hs  calculator.cpp  calculatrice.hs  chiffrCesar.hs
TP_projets/echocpp/: Makefile
TP_projets/echocpp/src/: client.cpp  server.cpp
TP_projets/echohs/: default.nix  echohs.cabal  shell.nix
TP_projets/echohs/src/: client.hs  server.hs
