name:                echohs
version:             0.1
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:             server.hs
  hs-source-dirs:      src
  build-depends:       base, 
                       network
  default-language:    Haskell2010

executable client
  main-is:             client.hs
  hs-source-dirs:      src
  build-depends:       base, 
                       network
  default-language:    Haskell2010

